# Projet_LLM_Assistant_RH

./: .gitignore  app.py  better_ingest.py  evaluate_app_langchain.py  ingest.py  main.py  main2.py  pyproject.toml  requirements.txt  search.py
chroma_db/: chroma.sqlite3
