[project]
name = "module-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pillow>=11.3.0",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "unstructured>=0.18.14",
]
